[gd_scene load_steps=11 format=3 uid="uid://in3d1ruusblo"]

[ext_resource type="StyleBox" uid="uid://deh0j1dwxiqxt" path="res://src/ui/custom_themes/panel_menu.tres" id="1_7v2rp"]
[ext_resource type="Script" uid="uid://be1no4frvurro" path="res://src/ui/ui_elements/upgrade_ui.gd" id="2_nom1l"]
[ext_resource type="Texture2D" uid="uid://ixwlo6xx1kuj" path="res://assets/icons/fiole_color.png" id="3_7v2rp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dtnkl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtnkl"]
bg_color = Color(0, 0, 0, 0.0588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nein"]
bg_color = Color(0, 0, 0, 0.533333)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6w6r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_nom1l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7v2rp"]
resource_name = "rotation"
length = 1.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(0.757857, 1.1487, 1.1487),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wsuvo"]
_data = {
&"RESET": SubResource("Animation_nom1l"),
&"rotation": SubResource("Animation_7v2rp")
}

[node name="UpgradeUI" type="Panel"]
custom_minimum_size = Vector2(365, 553)
offset_right = 365.0
offset_bottom = 553.0
pivot_offset = Vector2(152, 180)
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_7v2rp")
script = ExtResource("2_nom1l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrade name"
horizontal_alignment = 1

[node name="Level" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Level 0"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_7v2rp")
expand_mode = 1
stretch_mode = 3

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dtnkl")
theme_override_styles/hover = SubResource("StyleBoxFlat_dtnkl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2nein")
theme_override_styles/normal = SubResource("StyleBoxFlat_g6w6r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_wsuvo")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
